// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandTableDetailPage tests BrandTableDetailPage should render correctly 1`] = `
<div
  className="detailpage-container"
>
  <div
    className="detailpage-table-body"
  >
    <div
      className="brand-type-row header"
    >
      <div
        className="brand-type-col-1 sortSelected "
        key="label"
        onClick={[Function]}
      >
        Name
        <span
          className="sort-icon"
        >
          <Icon
            iconClass="table-sort-image"
            name="sortUp"
            size={18}
          />
        </span>
      </div>
      <div
        className="brand-type-col-2  number-text"
        key="score"
        onClick={[Function]}
      >
        Score
        <span
          className="sort-icon"
        />
      </div>
    </div>
    <div
      className="brand-type-row-content"
    >
      <div
        className="brand-type-row"
        key="Advil_0"
      >
        <div
          className="brand-type-col-1"
        >
          Advil
        </div>
        <div
          className="brand-type-col-3"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0.68}
            rounded={true}
            width={500}
          />
        </div>
        <div
          className="brand-type-col-2"
        >
          <div>
            68%
          </div>
        </div>
      </div>
      <div
        className="brand-type-row"
        key="alli_1"
      >
        <div
          className="brand-type-col-1"
        >
          alli
        </div>
        <div
          className="brand-type-col-3 compare-linear-progressbar"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0.7}
            rounded={true}
            width={500}
          />
          <div
            className="compare-linear-progressbar"
          >
            <LinearProgressBar
              animate={true}
              fillColor="#F79764"
              height={5}
              percent={0.7}
              rounded={true}
              width={500}
            />
          </div>
        </div>
        <div
          className="brand-type-col-2"
        >
          <div>
            70%
          </div>
        </div>
      </div>
      <div
        className="brand-type-row"
        key="Aquafresh_2"
      >
        <div
          className="brand-type-col-1"
        >
          Aquafresh
        </div>
        <div
          className="brand-type-col-3"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0}
            rounded={true}
            width={500}
          />
        </div>
        <div
          className="brand-type-col-2"
        >
          <div>
            NA
          </div>
        </div>
      </div>
      <div
        className="brand-type-row"
        key="Centrum_3"
      >
        <div
          className="brand-type-col-1"
        >
          Centrum
        </div>
        <div
          className="brand-type-col-3 compare-linear-progressbar"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0}
            rounded={true}
            width={500}
          />
          <div
            className="compare-linear-progressbar"
          >
            <LinearProgressBar
              animate={true}
              fillColor="#F79764"
              height={5}
              percent={0.6}
              rounded={true}
              width={500}
            />
          </div>
        </div>
        <div
          className="brand-type-col-2"
        >
          <div>
            NA
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BrandTableDetailPage tests BrandTableDetailPage should render correctly when compare date is applied 1`] = `
<div
  className="detailpage-container"
>
  <div
    className="detailpage-table-body"
  >
    <div
      className="brand-type-row header"
    >
      <div
        className="brand-type-col-1 sortSelected "
        key="label"
        onClick={[Function]}
      >
        Name
        <span
          className="sort-icon"
        >
          <Icon
            iconClass="table-sort-image"
            name="sortUp"
            size={18}
          />
        </span>
      </div>
      <div
        className="brand-type-col-2  number-text"
        key="score"
        onClick={[Function]}
      >
        Score
        <span
          className="sort-icon"
        />
      </div>
    </div>
    <div
      className="brand-type-row-content"
    >
      <div
        className="brand-type-row"
        key="Advil_0"
      >
        <div
          className="brand-type-col-1"
        >
          Advil
        </div>
        <div
          className="brand-type-col-3"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0.68}
            rounded={true}
            width={500}
          />
        </div>
        <div
          className="brand-type-col-2"
        >
          <div
            className="dots-container"
          >
            <DotWithLabel
              color="#4CA0FA"
              text="68%"
            />
            <DotWithLabel
              color="#F79764"
              text="NA"
            />
          </div>
        </div>
      </div>
      <div
        className="brand-type-row"
        key="alli_1"
      >
        <div
          className="brand-type-col-1"
        >
          alli
        </div>
        <div
          className="brand-type-col-3 compare-linear-progressbar"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0.7}
            rounded={true}
            width={500}
          />
          <div
            className="compare-linear-progressbar"
          >
            <LinearProgressBar
              animate={true}
              fillColor="#F79764"
              height={5}
              percent={0.7}
              rounded={true}
              width={500}
            />
          </div>
        </div>
        <div
          className="brand-type-col-2"
        >
          <div
            className="dots-container"
          >
            <DotWithLabel
              color="#4CA0FA"
              text="70%"
            />
            <DotWithLabel
              color="#F79764"
              text="70%"
            />
          </div>
        </div>
      </div>
      <div
        className="brand-type-row"
        key="Aquafresh_2"
      >
        <div
          className="brand-type-col-1"
        >
          Aquafresh
        </div>
        <div
          className="brand-type-col-3"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0}
            rounded={true}
            width={500}
          />
        </div>
        <div
          className="brand-type-col-2"
        >
          <div
            className="dots-container"
          >
            <DotWithLabel
              color="#4CA0FA"
              text="NA"
            />
            <DotWithLabel
              color="#F79764"
              text="NA"
            />
          </div>
        </div>
      </div>
      <div
        className="brand-type-row"
        key="Centrum_3"
      >
        <div
          className="brand-type-col-1"
        >
          Centrum
        </div>
        <div
          className="brand-type-col-3 compare-linear-progressbar"
        >
          <LinearProgressBar
            animate={true}
            backgroundColor="#f3f5f8"
            fillColor="#4CA0FA"
            height={5}
            percent={0}
            rounded={true}
            width={500}
          />
          <div
            className="compare-linear-progressbar"
          >
            <LinearProgressBar
              animate={true}
              fillColor="#F79764"
              height={5}
              percent={0.6}
              rounded={true}
              width={500}
            />
          </div>
        </div>
        <div
          className="brand-type-col-2"
        >
          <div
            className="dots-container"
          >
            <DotWithLabel
              color="#4CA0FA"
              text="NA"
            />
            <DotWithLabel
              color="#F79764"
              text="60%"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BrandTableDetailPage tests BrandTableDetailPage should render correctly when data received is null 1`] = `
<div
  className="detailpage-container"
>
  <div
    className="detailpage-table-body"
  >
    <div
      className="brand-type-row header"
    >
      <div
        className="brand-type-col-1 sortSelected "
        key="label"
        onClick={[Function]}
      >
        Name
        <span
          className="sort-icon"
        >
          <Icon
            iconClass="table-sort-image"
            name="sortUp"
            size={18}
          />
        </span>
      </div>
      <div
        className="brand-type-col-2  number-text"
        key="score"
        onClick={[Function]}
      >
        Score
        <span
          className="sort-icon"
        />
      </div>
    </div>
    <div
      className="brand-type-row-content"
    />
  </div>
</div>
`;
